--- a/custom-photos.hbs
+++ b/custom-photos.hbs
@@ -16,7 +16,7 @@ into the {body} of the default.hbs template --}}
         <article class="post-full {{post_class}} {{#unless feature_image}}no-image{{/unless}}">
 
             <header class="post-full-header">
-
+                
                 <section class="post-full-tags">
                     {{tags separator=", &nbsp;&nbsp;" visibility="public"}}                    
                 </section>
@@ -28,59 +28,17 @@ into the {body} of the default.hbs template --}}
                 {{/if}}
 
                 <div class="post-full-byline">
-
                     <section class="post-full-byline-content">
-
-                        <ul class="author-list">
-                            {{#foreach authors}}
-                            <li class="author-list-item">
-
-                                <div class="author-card">
-                                    {{#if profile_image}}
-                                    <img class="author-profile-image" src="{{img_url profile_image size="xs"}}" alt="{{name}}" />
-                                    {{else}}
-                                    <div class="author-profile-image">{{> "icons/avatar"}}</div>
-                                    {{/if}}
-                                    <div class="author-info">
-                                        {{#if bio}}
-                                        <div class="bio">
-                                            <h2>{{name}}</h2>
-                                            <p>{{bio}}</p>
-                                            <p><a href="{{url}}">More posts</a> by {{name}}.</p>
-                                        </div>
-                                        {{else}}
-                                        <h2>{{name}}</h2>
-                                        <p>Read <a href="{{url}}">more posts</a> by this author.</p>
-                                        {{/if}}
-                                    </div>
-                                </div>
-
-                                {{#if profile_image}}
-                                <a href="{{url}}" class="author-avatar">
-                                    <img class="author-profile-image" src="{{img_url profile_image size="xs"}}" alt="{{name}}" />
-                                </a>
-                                {{else}}
-                                <a href="{{url}}" class="author-avatar author-profile-image">{{> "icons/avatar"}}</a>
-                                {{/if}}
-
-                            </li>
-                            {{/foreach}}
-                        </ul>
-
                         <section class="post-full-byline-meta">
-                            <h4 class="author-name">{{authors}}</h4>
                             <div class="byline-meta-content">
                                 <time class="byline-meta-date" datetime="{{date format="YYYY-MM-DD"}}">{{date format="D MMM YYYY"}}</time>
-                                <span class="byline-reading-time"><span class="bull">&bull;</span> {{reading_time}}</span>
                             </div>
                         </section>
-
                     </section>
-
-
                 </div>
             </header>
 
+            
             {{#if feature_image}}
             <figure class="post-full-image">
                 {{!-- This is a responsive image, it loads different sizes depending on device
@@ -107,8 +65,8 @@ into the {body} of the default.hbs template --}}
                     {{tags separator=",&nbsp;&nbsp; " prefix="Tagged in:&nbsp; " visibility="internal"}}
                 </div>
             </section>
-
-            {{!-- Email subscribe form at the bottom of the page --}}
+            
+             {{!-- Email subscribe form at the bottom of the page --}}
             {{#if @labs.members}}
                 {{> subscribe-form}}
             {{/if}}
@@ -118,7 +76,6 @@ into the {body} of the default.hbs template --}}
                 If you want to embed comments, this is a good place to do it!
             </section>
             --}}
-
         </article>
 
     </div>
@@ -129,12 +86,12 @@ into the {body} of the default.hbs template --}}
     <div class="inner">
         <div class="read-next-feed">
             {{#if primary_tag}}
-            {{#get "posts" filter="tags:{{primary_tag.slug}}+id:-{{id}}" limit="3" as |related_posts|}}
+            {{#get "posts" filter="tag:{{primary_tag.slug}}+tag:photos+id:-{{id}}" limit="3" as |related_posts|}}
                 {{#if related_posts}}
                 <article class="read-next-card">
                     <header class="read-next-card-header">
                         {{#../primary_tag}}
-                        <h3><span>More in</span> <a href="{{url}}">{{name}}</a></h3>
+                        <h3><span>More photos in</span> <a href="{{url}}">{{name}}</a></h3>
                         {{/../primary_tag}}
                     </header>
                     <div class="read-next-card-content">
@@ -143,15 +100,14 @@ into the {body} of the default.hbs template --}}
                             <li>
                                 <h4><a href="{{url}}">{{title}}</a></h4>
                                 <div class="read-next-card-meta">
-                                    <p><time datetime="{{date format="YYYY-MM-DD"}}">{{date format="D MMM YYYY"}}</time> –
-                                        {{reading_time}}</p>
+                                    <p><time datetime="{{date format="YYYY-MM-DD"}}">{{date format="D MMM YYYY"}}</time></p>
                                 </div>
                             </li>
                             {{/foreach}}
                         </ul>
                     </div>
                     <footer class="read-next-card-footer">
-                        <a href="{{#../primary_tag}}{{url}}{{/../primary_tag}}">{{plural meta.pagination.total empty='No posts' singular='% post' plural='See all % posts'}}
+                        <a href="{{#../primary_tag}}{{url}}{{/../primary_tag}}">{{plural meta.pagination.total empty='No Photos' singular='% photo' plural='See all % phptos'}}
                             →</a>
                     </footer>
                 </article>
@@ -160,14 +116,25 @@ into the {body} of the default.hbs template --}}
             {{/if}}
 
             {{!-- If there's a next post, display it using the same markup included from - partials/post-card.hbs --}}
-            {{#next_post}}
-                {{> "post-card"}}
-            {{/next_post}}
+            {{#get "posts" 
+                filter="tags:{{primary_tag.slug}}+tag:photos+id:>{{id}}" 
+                limit="1" 
+                order="id asc"}}
+                {{#foreach posts}}
+                    {{> "photo-card"}}
+                {{/foreach}}
+            {{/get}}
 
             {{!-- If there's a previous post, display it using the same markup included from - partials/post-card.hbs --}}
-            {{#prev_post}}
-                {{> "post-card"}}
-            {{/prev_post}}
+
+            {{#get "posts" 
+                filter="tags:{{primary_tag.slug}}+tag:photos+id:<{{id}}" 
+                limit="1" 
+                order="id desc"}}
+                {{#foreach posts}}
+                    {{> "photo-card"}}
+                {{/foreach}}
+            {{/get}}
         </div>
     </div>
 </aside>
