--- a/default.hbs
+++ b/default.hbs
@@ -7,7 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     {{!-- Base Meta --}}
+    {{!-- <title>{{meta_title}}</title> --}}
+
+    {{#unless tag}}
+  <title>{{meta_title}}</title>
+{{else}}
+  {{#tag}}
     <title>{{meta_title}}</title>
+  {{/tag}}
+{{/unless}}
+
+
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
