--- a/custom-photos.hbs
+++ b/custom-photos.hbs
@@ -107,7 +107,7 @@ into the {body} of the default.hbs template --}}
                         </ul>
                     </div>
                     <footer class="read-next-card-footer">
-                        <a href="{{#../primary_tag}}{{url}}{{/../primary_tag}}">{{plural meta.pagination.total empty='No Photos' singular='% photo' plural='See all % phptos'}}
+                        <a href="{{#../primary_tag}}{{url}}{{/../primary_tag}}">{{plural meta.pagination.total empty='No Photos' singular='% photo' plural='See all % photos'}}
                             →</a>
                     </footer>
                 </article>
