--- a/default.hbs
+++ b/default.hbs
@@ -40,10 +40,13 @@
             <div class="site-footer-content inner">
                 <section class="copyright"><a href="{{@site.url}}">{{@site.title}}</a> &copy; {{date format="YYYY"}}</section>
                 <nav class="site-footer-nav">
-                    <a href="{{@site.url}}">Latest Posts</a>
+                    <a href="{{@site.url}}">Home</a>
+                    <a href="https://linkedin.com/in/Prajankya" target="_blank" rel="noopener">Linkedin</a>
+                    
+                    <a href="https://github.com/Prajankya" target="_blank" rel="noopener">Github</a>
+                    
                     {{#if @site.facebook}}<a href="{{facebook_url @site.facebook}}" target="_blank" rel="noopener">Facebook</a>{{/if}}
                     {{#if @site.twitter}}<a href="{{twitter_url @site.twitter}}" target="_blank" rel="noopener">Twitter</a>{{/if}}
-                    <a href="https://ghost.org" target="_blank" rel="noopener">Ghost</a>
                 </nav>
             </div>
         </footer>
