--- a/default.hbs
+++ b/default.hbs
@@ -37,6 +37,13 @@
 
         {{!-- The footer at the very bottom of the screen --}}
         <footer class="site-footer outer">
+            {{#if @site.logo}}
+                <div style="text-align:center; padding:8px 8px 20px 8px">
+                    <img style="width:50vw;max-width:220px;"
+                    src="{{img_url @site.logo size="l"}}" alt="{{@data.title}}" />
+                </div>
+            {{/if}}
+
             <div class="site-footer-content inner">
                 <section class="copyright"><a href="{{@site.url}}">{{@site.title}}</a> &copy; {{date format="YYYY"}}</section>
                 <nav class="site-footer-nav">
