added youtube background

--- a/index.hbs
+++ b/index.hbs
@@ -3,7 +3,8 @@
 into the {body} of the default.hbs template --}}
 
 <header class="site-home-header">
-    {{> header-background background=@site.cover_image}} {{!--Special header-image.hbs partial to generate the background image--}}
+    {{> header-background youtube_id="u_6a2h6l7q0"}} {{!--Special header-image.hbs partial to generate the background image--}}
+
         <div class="inner">
             {{> "site-nav"}}
             <div class="site-header-content">
