--- a/partials/header-background.hbs
+++ b/partials/header-background.hbs
@@ -88,7 +88,19 @@ with a `no-image` class so we can style it accordingly.
 <div class="outer site-header-background responsive-header-iframe">
     <div class="video-background">
         <div class="video-foreground">
-            <iframe src="https://www.youtube.com/embed/{{youtube}}?autoplay=1&mute=1&enablejsapi=1&controls=0&loop=1&modestbranding=1&playsinline=1&disablekb=1&playlist=u_6a2h6l7q0" frameborder="0" width="100%" height="100%" allow="autoplay"></iframe>
+            <script>
+                // Add this script
+                function deferIframe() {
+                    var iframeElem = document.getElementsByTagName('iframe');
+                    for ( var i = 0; i < iframeElem.length; i++ ) {
+                        if(iframeElem[i].getAttribute('data-src')) {
+                        iframeElem[i].setAttribute('src',iframeElem[i].getAttribute('data-src'));
+                        } 
+                    } 
+                }
+                window.onload = deferIframe;
+            </script>
+            <iframe data-src="https://www.youtube.com/embed/{{youtube}}?autoplay=1&mute=1&enablejsapi=1&controls=0&loop=1&modestbranding=1&playsinline=1&disablekb=1&playlist=u_6a2h6l7q0" frameborder="0" width="100%" height="100%" allow="autoplay"></iframe>
         </div>
     </div>
 {{else}}
